--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,21 @@ border-radius: 2px;
 padding: 0.3rem;
 }
 nav{
-  display: block;
-  text-align: center;
-  margin-top: 2rem;
  
+   display: block;
+   text-align: center;
+   position: fixed;
+   width:100%;
+   height: 8vh;
+   background-color:black;
+  
   
  }
  nav button{
-   
+   margin-top: 0.7rem;
    border-radius:0.5rem;
-   color: rgb(234, 218, 46);
-   background-color:  rgb(160, 4, 53);
+   color: rgb(229, 7, 137);
+   background-color: white;
    padding: 5px;
    text-transform: uppercase;
    font-weight: bold;
@@ -30,16 +34,18 @@ nav{
  
  } 
 .container{
-  margin-top: 2rem;
+ 
   text-align: center;
   
 }
 
 .card{
+  margin-top: 2.8rem;
   border: 1px solid black;
   border-radius: 0.5rem;
   display: inline-block;
   padding: 10px 10px;
+  background-color:rgb(250, 244, 244);
 }
 .name{
   color: rgb(241, 8, 82);
