--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,153 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-h1{
-  background-color:rgb(241, 8, 82);
+h1 {
+  background-color: rgb(241, 8, 82);
   display: inline-block;
-border-radius: 2px;
-padding: 0.3rem;
+  border-radius: 2px;
+  padding: 0.3rem;
 }
-nav{
- 
-   display: block;
-   text-align: center;
-   position: fixed;
-   width:100%;
-   height: 8vh;
-   background-color:black;
-  
-  
- }
- nav button{
-   margin-top: 1rem;
-   border-radius:0.5rem;
-   color: rgb(229, 7, 137);
-   background-color: white;
-   padding: 5px;
-   text-transform: uppercase;
-   font-weight: bold;
-   margin-left: 1rem;
-   cursor: pointer;
- 
- } 
-.container{
- 
+nav {
+  display: block;
   text-align: center;
-  
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+  background-color: black;
+}
+nav button {
+  margin-top: 1rem;
+  border-radius: 0.3rem;
+  color: rgb(229, 7, 137);
+  background-color: white;
+  padding: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-left: 1rem;
+  cursor: pointer;
 }
 
-.card{
-  margin-top: 3.5rem;
+.container {
+  text-align: center;
+
+}
+
+.card {
+  margin-top: 4.5rem;
   border: 1px solid black;
   border-radius: 0.5rem;
   display: inline-block;
   padding: 10px 10px;
-  background-color:rgb(250, 244, 244);
-}
-.name{
-  color: rgb(241, 8, 82);
-}
-.price{
-  
-  color:  rgb(146, 52, 228);
+  background-color: rgb(219, 241, 190);
 }
 
-img{
+.name {
+  color: rgb(241, 8, 82);
+}
+.price {
+  color: rgb(146, 52, 228);
+}
+
+img {
   padding: 1rem 0;
   width: 18rem;
   height: 15rem;
-  
 }
-.order{
-  margin: 1rem 0;
-  padding: 2px 2px;
-  background-color: rgb(25, 243, 141);
-  border-radius: 5px;
-  text-transform: uppercase;
-  color:red; 
+.order {
+  margin-top: 5px;
+   font-size: 11px;
+  height: auto;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
   cursor: pointer;
-}
-.footer{
-  text-align: center;
- margin: 1rem 0;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
+.order:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+.order:hover {
+  box-shadow: rgba(44, 187, 99, 0.35) 0 -25px 18px -14px inset,
+    rgba(44, 187, 99, 0.25) 0 1px 2px, rgba(44, 187, 99, 0.25) 0 2px 4px,
+    rgba(44, 187, 99, 0.25) 0 4px 8px, rgba(44, 187, 99, 0.25) 0 8px 16px,
+    rgba(44, 187, 99, 0.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.order:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+
+.footer {
+  text-align: center;
+  margin: 1rem 0;
+}
+.card:hover {
+	background: rgba(0,0,0,0);
+	color: #5a1d7e;
+	box-shadow: inset 0 0 0 2px #94e3ac;
+}
+
+@media (max-width: 720px) {
+  .container{
+    margin: 0px 40px;
+    cursor: pointer;
+  }
+  
+}
