--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,7 @@ img {
 }
 @media (max-width: 400px)  {
   .container{
-    margin-top: 0px;
-    margin-left: 10px;
-    margin-right: 15px;
+    margin: 0px 15px;
+    
   } 
 }
