--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,71 @@ nav button:hover {
   font-style: italic;
   transform: scale(1.05) rotate(-3deg);
 }
+.title{
+  text-align: center;
+  padding: 0.2rem ; 
+  background-color: rgb(241, 240, 237);
+  text-shadow: #0bed4f;
+  
+ 
+}
+.naam{
+  display: inline-block;
+  position: relative; 
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-size: larger;
+  color: darkblue;
+  text-align: center;
+  transition: all 0.2s; 
+  animation: namebouncy 5s infinite linear;
 
+}
+
+.naam:hover {
+font-size: x-large;
+  color:  rgb(241, 8, 82);
+}
+
+@keyframes namebouncy {
+  0% {
+    top: 0em;
+  }
+  40% {
+    top: 0em;
+  }
+  43% {
+    top: -0.9em;
+  }
+  46% {
+    top: 0em;
+  }
+  48% {
+    top: -0.4em;
+  }
+  50% {
+    top: 0em;
+  }
+  100% {
+    top: 0em;
+  }
+} 
+.name{
+  color: #e8348b;
+  margin: 2px 0;
+}
+.name:hover{
+  color:darkblue;
+}
 .container {
   text-align: center;
 
 }
 
 .card {
-  margin-top: 4.5rem;
+  margin-top: 6.4rem;
   border: 1px solid black;
   border-radius: 0.5rem;
   display: inline-block;
@@ -57,9 +114,7 @@ nav button:hover {
 	box-shadow: inset 0 0 0 5px #0bed4f;
   
 }
-.name {
-  color: rgb(241, 8, 82);
-}
+
 .price {
   color: rgb(146, 52, 228);
 }
